--- a/src/App.css
+++ b/src/App.css
@@ -29,5 +29,17 @@
     link-hover{
         @apply hover:underline hover:text-primary
     };
+
+    .home-section{
+        @apply bg-base-100 rounded-xl px-4 md:px-5 py-5 md:py-10;
+    }
+
+    .home-section h1{
+        @apply text-xl md:text-4xl;
+    }
+
+    .home-section-subtitle{
+         @apply text-sm md:text-2xl font-medium flex gap-2 md:items-center;
+    }
     
 }
