--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
     };
 
     .home-section{
-        @apply bg-base-100 rounded-xl px-4 md:px-5 py-5 md:py-10;
+        @apply bg-base-100 rounded-xl px-4 md:px-5 py-5 md:py-10 space-y-2;
     }
 
     .home-section h1{
